# counter_project1

./: .gitignore  CMakeLists.txt  README.md
counter_project1/: CMakeLists.txt  counter_project1.cpp  counter_project1.h
include/: counter.h
scripts/: build_android.sh
src/: counter.cpp
tests/: counter_test.cpp
